# aw-watcher-screenshot-linux

./: README.md  aw-watcher-screenshot.py  main.py  pyproject.toml
aw_watcher_screenshot/: capture.py  models.py  utils.py  watcher.py  window_detector.py
